frontend/test/should_fail/index_exec_mm_min_node.grg
#using "index_min_max_size_model.gm"

rule r {
	n:N -e:E->;
	
	modify {
	---
		exec( {{ minNodeFromIndex(n) in nodesFromIndex(fooi) }} );
	}
}
